# tinygrad.ml

./: AGENTS_STAGING.md  LICENSE  README.md  dune-project  task_tinygrad_port.md  tinygrad_ml.opam
docs/proposals/: add-package-deps.md
experimental/: cuda_backend_real.ml  metal_backend_real.ml
lib/: cstyle.ml  cuda_backend.ml  cuda_device.cudajit.ml  cuda_device.missing.ml  device.ml  dtype.ml  dune  gradient.ml  helpers.ml  metal_backend.ml  metal_device.metal.ml  metal_device.missing.ml  nn.ml  ops.ml  pattern_matcher.ml  realize.ml  renderer.ml  schedule.ml  tensor.ml  uop.ml
src/: backend_intf.ml  buffer.ml  c_renderer.ml  cpu_c_backend.ml  cuda_backend.ml  cuda_renderer.ml  demo.ml  dtype.ml  dune  metal_backend.ml  metal_renderer.ml  program_spec.ml  runtime.ml  tensor.ml  tinygrad_ml.ml  uop.ml
test/: dune  test_all.ml  test_cpu.ml  test_cuda.ml  test_e2e.ml  test_helpers.ml  test_metal.ml  test_metal_debug.ml  test_quick.ml
